// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display a ready notification 1`] = `
<NavBarNotif
  className="alert alert-success"
>
  <span>
    marketplace.status.AUTOMATIC_READY
  </span>
</NavBarNotif>
`;

exports[`should display an error notification 1`] = `
<NavBarNotif
  className="alert alert-danger"
>
  marketplace.status.AUTOMATIC_FAILURE
  <a
    className="little-spacer-left"
    href="https://www.sonarsource.com"
    target="_blank"
  >
    marketplace.how_to_install
  </a>
</NavBarNotif>
`;

exports[`should display an in progress notif 1`] = `
<NavBarNotif
  className="alert alert-info"
>
  <i
    className="spinner spacer-right text-bottom"
  />
  <span>
    marketplace.status.AUTOMATIC_IN_PROGRESS
  </span>
</NavBarNotif>
`;
